<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#00ADF1"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/email"
        android:textColor="@android:color/white"
        android:textSize="22sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="3dp" >

        <EditText
            android:id="@+id/et_recipient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_recipient"
            android:singleLine="true"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/et_subject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_subject"
            android:inputType="textEmailSubject|textAutoCorrect" 
            android:singleLine="true"/>

        <EditText
            android:id="@+id/et_message"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="top"
            android:inputType="textMultiLine|textShortMessage|textCapSentences|textAutoCorrect"
            android:hint="@string/hint_message" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_send"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/send" 
        android:textSize="20sp"
        android:layout_margin="5dp"
        android:textColor="@android:color/white"
        android:padding="10dp"
        android:background="#D24726"/>

</LinearLayout>